@@ -1,1 +1,3 @@
 If the table plugin is enabled, then creating a page, inserting a `\[[!table ...]` and clicking preview yields "htmlization of not supported" (sic). --[[madduck]]
+
+[[fix0red|done]] --[[Joey]]
